# flux

./: flux.cabal  gl.cabal  make
src/: .session  Main.hs  Test2d.hs
src/Audio/: MidiTest.hs
src/Engine/: Bitmap.hs  Color.hs  Font.hs  Functor.hs  Geometry.hs  Interpolation.hs  Math.hs  Modifiers.hs  Normal.hs  Primitives.hs  Projection.hs  Range.hs  Sampling.hs  Storable.hs  Surface.hs  Texture.hs  Timer.hs  Transform.hs  Types.hs  Vector.hs  Volume.hs
src/Grid/: Grid.hs
src/OpenGL/: Display.hs  Drawing.hs  Font.hs  ProggyOptiS.hs  Setup.hs  SurfaceUV.hs
src/OpenGL/Aspect/: DragOrtho.hs  DragPersp.hs  Keyboard.hs  Ortho.hs  Persp.hs  Timer.hs
src/Scenes/: Effects.hs  Scenes.hs
src/Scenes/Examples/: NormalMap.hs  RotatingLight.hs  Test.hs
src/Terminal/: Terminal.hs
textures/: cross-normal.rgba  cross.rgba  displace0.rgba  monster-normal.rgba  monster.rgba  opti.rgba  sp-star-pink.rgba  test.rgba  wall-normals.rgba
